--- a/Projeto Wexer PSI/pacientes.html
+++ b/Projeto Wexer PSI/pacientes.html
@@ -229,7 +229,12 @@
 
                     <section class="field">
                         <label for="gender">Sexo:</label><br>
-                        <input type="text" placeholder="digite" id="genderE" name="gender" class="inputgender" />
+                        <select  id="genderE" name="gender" >
+                            <option value="" hidden></option>
+                            <option value="Masculino">Masculino</option>
+                            <option value="Feminino">Feminino</option>
+                            <option value="Outro">Outro</option>
+                        </select>
                     </section>
 
                     <!--  Menu Suspenso para escolha do sexo
