Edição projeto pagina prontuário
continuação do desenvolvimento da pagina de prontuário.

--- a/Projeto Wexer PSI/prontuario.html
+++ b/Projeto Wexer PSI/prontuario.html
@@ -46,17 +46,17 @@
         </div>
 
 
-    <div id="bodyPromptuary">
+        <div id="bodyPromptuary">
 
-        <div id="cardIdPatient">
+            <div id="cardIdPatient">
 
-            <div id="idPatient">
-                Identificação do paciente
-            </div>
+                <div id="idPatient">
+                    Identificação do paciente
+                </div>
 
                 <section class="informations">
                     <div class="titlePatient">
-                        Paciente
+                        <i class="fa-regular fa-user"></i> Paciente
                     </div>
                     <div class="name">
                         Biricutico
@@ -65,7 +65,7 @@
 
                 <section class="informations">
                     <div class="titlePatient">
-                        Nascimento
+                        <i class="fa-regular fa-calendar"></i>Nascimento
                     </div>
                     <div class="data">
                         30/03/1981
@@ -74,7 +74,7 @@
 
                 <section class="informations">
                     <div class="titlePatient">
-                        Profissão
+                        <i class="fa-solid fa-briefcase"></i>Profissão
                     </div>
                     <div class="profession">
                         Analista de TI
@@ -83,47 +83,90 @@
 
                 <section class="informations">
                     <div class="titlePatient">
-                        Escolaridade
+                        <i class="fa-solid fa-book"></i>Escolaridade
                     </div>
                     <div class="scholarity">
                         Superior Completo
                     </div>
                 </section>
 
-            
 
-        </div>
 
-        <div id="containerRight">
+            </div>
 
-            <div id="boxSection">
-                <div id="sections">
-                    Sessão
+            <div id="containerRight">
+
+                <div id="boxSection">
+                    <div id="sections" class="alignComponents">
+                        <img src="assets/imagens/prontuario/head.svg" />
+                        Sessão
+                    </div>
+                    <div id="relevantFact" class="alignComponents">
+                        <img src="assets/imagens/prontuario/mark.svg" />
+                        Fato relevante
+                    </div>
+
                 </div>
-                <div id="relevantFact">
-                    Fato relevante
+
+                <div id="lineFilter">
+                    <div id="line"></div>
+                    <div id="textFilter">
+                       <div> Filtrar por: <strong>Todos</strong> </div>
+                        <p><i class="fa-solid fa-sort-down"></i></p>
+                    </div>
                 </div>
 
+                <div id="cardSections">
+
+                    <div id="imgsection">
+                        <button id="btnSection">
+                            <img src="assets/imagens/prontuario/headW.svg"/>
+                        </button>
+                        <div id="titleSection">
+                            Sessão 
+                        </div>
+                        <div id="dateSection">
+                            15 de Abril de 2023
+                        </div>
+                        <dix id="textSection">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nisi voluptatibus harum ullam eum, vero dignissimos labore dolorem est iure laudantium doloribus, quos et! Laborum repellendus deserunt inventore doloremque explicabo?Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident recusandae reiciendis harum nisi, obcaecati facilis eius beatae veritatis repudiandae eos quisquam consequatur neque pariatur autem nihil, voluptatibus totam omnis sequi.
+                        </dix>
+                    </div>
+                    <div id="showEditDelSelection">
+                        ...
+                    </div>
+
+                </div>
+
+                <div id="cardRelevantFact">
+
+                    <div id="imgRelevantFact">
+                        <button id="btnRelevantFact">
+                            <img src="assets/imagens/prontuario/markW.svg"/>
+                        </button>
+                        <div id="titleRelevantFact">
+                            Sessão 
+                        </div>
+                        <div id="dateRelevantFact">
+                            15 de Abril de 2023
+                        </div>
+                        <dix id="textRelevantFact">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nisi voluptatibus harum ullam eum, vero dignissimos labore dolorem est iure laudantium doloribus, quos et!.
+                        </dix>
+                    </div>
+                    <div id="showEditDelRelevantFact">
+                        ...
+                    </div>
+
+
+                </div>
             </div>
 
-            <div id="lineFilter">
-                Filtrar por:
-            </div>
-
-            <div id="cardSections">
-
-            </div>
-
-            <div id="cardRelevantFact">
-
-            </div>
         </div>
 
     </div>
 
     </div>
-
-</div>
 
 
 </body>
