--- a/Projeto Wexer PSI/login.html
+++ b/Projeto Wexer PSI/login.html
@@ -27,7 +27,7 @@
                     <input placeholder="Digite sua senha" type="password" id="password" name="password" class="input" />
                 </section>
 
-                <button onclick ="confirmLogin(email, password)" type="submit" class="submit" id="submit-btn">Entrar</button>
+                <button onclick ="confirmLogin()" type="submit" class="submit" id="submit-btn">Entrar</button>
                 
                 <div class = "freeRegister">
                     <a href="cadastro.html"> Cadastre-se gratuitamente </a>
