--- a/Projeto Wexer PSI/index.html
+++ b/Projeto Wexer PSI/index.html
@@ -32,7 +32,7 @@
                             class="input" />
                     </section>
 
-                    <button onclick="confirmLogin()" type="submit" class="submit" id="submit-btn">Entrar</button>
+                    <button  type="submit" class="submit" id="submit-btn">Entrar</button>
 
                     <div class="freeRegister">
                         <a href="cadastro.html"> Cadastre-se gratuitamente </a>
