--- a/Projeto Wexer PSI/pacientes.html
+++ b/Projeto Wexer PSI/pacientes.html
@@ -38,7 +38,7 @@
 
                 <div>
                     <input type="text" placeholder="Pesquisar" id="inputFilter">
-                    <button id="search"><i class="fa-solid fa-magnifying-glass"></i> Filtrar</button>
+                    <button id="search" type="submit"><i class="fa-solid fa-magnifying-glass"></i> Filtrar</button>
                 </div>
 
             </div>
