--- a/Projeto Wexer PSI/pacientes.html
+++ b/Projeto Wexer PSI/pacientes.html
@@ -22,7 +22,7 @@
 
         <div class="welcome">
             <span id="textHeader">Bem vindo (a), </span>
-            <span id="user"><strong>Biricutico</strong> </span>
+            <span id="user"><strong>Usuário</strong> </span>
             <img src="assets/imagens/pacientes/icon/Mask.svg" />
         </div>
     </header>
@@ -274,7 +274,7 @@
                         </span>
                         <div id="editCancel">
                             <a href="pacientes.html" id="cancel"> Cancelar</a>
-                            <button onclick ="requestValueUpdate()" id="editPatient">Salvar alterações</button>
+                            <button type="button" onclick ="requestValueUpdate()" id="editPatient">Salvar alterações</button>
                         </div>
 
                     </div>
@@ -397,7 +397,7 @@
                     Paciente cadastrado com sucesso
                 </div>
 
-                <button onclick="closeModalS()"  class="closeSuccess">Ok</button>
+                <button type="button" onclick="closeModalS()"  class="closeSuccess">Ok</button>
 
             </div>
         </div>
