--- a/Projeto Wexer PSI/prontuario.html
+++ b/Projeto Wexer PSI/prontuario.html
@@ -246,7 +246,7 @@
                         *Campos obrigatórios
                     </span>
                     <div id="createSession">
-                        <a href="pacientes.html" id="cancel"> Cancelar</a>
+                        <a href="prontuario.html" id="cancel"> Cancelar</a>
                         <button onclick="patientCreate()" type="button" id="btnCreateSession">Criar</button>
                     </div>
 
@@ -267,5 +267,4 @@
 <script src="assets/scripts/scriptProntuario.js"></script>
 
 <script src="https://kit.fontawesome.com/8a66317056.js" crossorigin="anonymous"></script>
-
 </html>
