--- a/Projeto Wexer PSI/prontuario.html
+++ b/Projeto Wexer PSI/prontuario.html
@@ -17,7 +17,7 @@
 <body>
     <header id="largeBox">
 
-        <div class="initLargeBox">
+        <div id="return" class="initLargeBox">
             <img src="assets/imagens/pacientes/Xwexer.svg" class="imageOne" />
             <a href="pacientes.html"> Voltar para listagem</a>
         </div>
@@ -59,7 +59,7 @@
                         <i class="fa-regular fa-user"></i> Paciente
                     </div>
                     <div class="name" id="nameP">
-
+                        Fulano
                     </div>
                 </section>
 
@@ -68,7 +68,7 @@
                         <i class="fa-regular fa-calendar"></i>Nascimento
                     </div>
                     <div class="data" id="dataP">
-
+                        25/10/1998
                     </div>
                 </section>
 
@@ -77,7 +77,7 @@
                         <i class="fa-solid fa-briefcase"></i>Profissão
                     </div>
                     <div class="profession" id="professionP">
-
+                        Analista VASP
                     </div>
                 </section>
 
@@ -86,7 +86,7 @@
                         <i class="fa-solid fa-book"></i>Escolaridade
                     </div>
                     <div class="scholarity" id="scholarityP">
-
+                        Superior completo
                     </div>
                 </section>
 
@@ -176,13 +176,72 @@
 
 
                 </div>
+
+                <div id="cardSessions">
+
+                    <div id="imgsection">
+                        <button id="btnSessions">
+                            <img src="assets/imagens/prontuario/headW.svg" />
+                        </button>
+                        <div id="titleInfo">
+                            Sessão
+                        </div>
+                        <div id="dateInfo">
+                            20 de Abril de 2023
+                        </div>
+                        <dix id="textInfo">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nisi voluptatibus harum ullam
+                            eum, vero dignissimos labore dolorem est iure laudantium doloribus, quos et! Laborum
+                            repellendus deserunt inventore doloremque explicabo?Lorem ipsum dolor sit amet consectetur
+                            adipisicing elit. Provident recusandae reiciendis harum nisi, obcaecati facilis eius beatae
+                            veritatis repudiandae eos quisquam consequatur neque pariatur autem nihil, voluptatibus
+                            totam omnis sequi.
+                        </dix>
+                    </div>
+                    <div id="showEditDelSelection">
+                        ...
+                    </div>
+
+                </div>
+
+                <div id="cardRelevantFact">
+
+                    <div id="imgRelevantFact">
+                        <button id="btnRelevantFact">
+                            <img src="assets/imagens/prontuario/markW.svg" />
+                        </button>
+                        <div id="titleInfo">
+                            Fato relevante
+                        </div>
+                        <div id="dateInfo">
+                            20 de Abril de 2023
+                        </div>
+                        <dix id="textInfo">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nisi voluptatibus harum ullam
+                            eum, vero dignissimos labore dolorem est iure laudantium doloribus, quos et!.
+                        </dix>
+                    </div>
+                    <div id="showEditDelRelevantFact">
+                        ...
+                    </div>
+
+
+                </div>
             </div>
 
         </div>
 
+        <div>
+
+            <div id="returnTop">
+                <img src="assets/imagens/prontuario/Mask.svg"/>
+                <a href="#return"> Voltar ao topo</a>
+            </div>
+        </div>
+
     </div>
 
-    <div id="modalNewSession">
+    <!-- <div id="modalNewSession">
 
         <div id="modal" class="modal">
 
@@ -253,8 +312,8 @@
                 </div>
             </div>
 
-        </div>
-    </div>
+        </div> 
+    </div>-->
     </div>
 
 
