--- a/Projeto Wexer PSI/pacientes.html
+++ b/Projeto Wexer PSI/pacientes.html
@@ -21,9 +21,17 @@
         </div>
 
         <div class="welcome">
-            <span id="textHeader">Bem vindo (a), </span>
-            <span id="user"><strong>Usuário</strong> </span>
-            <img src="assets/imagens/pacientes/icon/Mask.svg" />
+            <div id="textHeader">Bem vindo (a), </div>
+            <div id="userDd" class="userDd">
+                <div class="textUser">Usuário</div> 
+                <div class="dropdownEnd">
+                    <div class="dropContainer">Adm. Usuário</div>
+                    <div class="dropContainer"><a href="index.html">Sair</a></div>
+                </div>
+            </div>
+            <div>
+                <img src="assets/imagens/pacientes/icon/Mask.svg" />
+            </div>
         </div>
     </header>
 
