--- a/Projeto Wexer PSI/prontuario.html
+++ b/Projeto Wexer PSI/prontuario.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Wexer Prontuário</title>
     <link rel="stylesheet" href="assets/style/styleProntuario.css">
     <link rel="stylesheet" href="assets/style/global.css">
     <link rel="stylesheet" href="assets/style/styleModalProntuario.css">
